2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (create_proc_field_page):
	* src/procman.c: (procman_get_tree_state),
	(procman_save_tree_state): Should fix column selection. Also fixed
	some leaks.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_preferences_dialog): Fixed spin
	button value for update_interval.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: 2.11.4 post release version bump.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.11.3.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_get_icon), (load_icon_for_commands):
	* src/proctable.c: (proctable_free_info): Fixed references mess that
	often causes segfaults.
	Special thanks to Rod Butcher who helped me.

2005-06-07  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: Ooops, fixed enum values.

2005-06-07  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_preferences_dialog):
	* src/procman.h:
	* src/smooth_refresh.c: (smooth_refresh_get): Ensures 
	MIN_UPDATE_INTERVAL <= update_interval <= MAX_UPDATE_INTERVAL.

2005-06-05  Benoît Dejean  <TazForEver@dlfp.org>

	* src/smooth_refresh.c: (smooth_refresh_get): Less verbose debug message.

2005-06-03  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (remove_info_from_tree): Don't use a copy of info->node.

2005-06-02  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (update_info): Removed useless code. I forgot to
	clean this when i fixed #305060.

2005-06-01  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (update_info): Fixed process sort.
	Closes #305060. This has an impact on performance but we're safe with
	the smooth refresh.

2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (shift_right), (load_graph_update),
	(load_graph_unalloc), (load_graph_alloc):