@@ -277,6 +277,18 @@
         <long></long>
       </locale>
       </schema>
+
+      <schema>
+      <key>/schemas/apps/procman/proctree/columns_order</key>
+      <applyto>/apps/procman/proctree/columns_order</applyto>
+      <owner>procman</owner>
+      <type>list</type>
+      <list_type>int</list_type>
+      <locale name="C">
+        <short>Process view columns order</short>
+        <long></long>
+      </locale>
+      </schema>
       
       <schema>
       <key>/schemas/apps/procman/proctree/sort_order</key>
