@@ -1,5 +1,17 @@
 2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/gnome-system-monitor.schemas.in:
+	* src/procman.c: (procman_get_tree_state),
+	(procman_save_tree_state):
+	* src/proctable.c: (cb_columns_changed),
+	(my_gtk_tree_view_get_column_with_sort_column_id),
+	(proctable_set_columns_order), (proctable_get_columns_order),
+	(proctable_new):
+	* src/proctable.h: Implemented save/store for the proctable columns
+	order.
+
+2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/procdialogs.c: (create_proc_field_page):
 	* src/procman.c: (procman_get_tree_state),
 	(procman_save_tree_state): Should fix column selection. Also fixed
